timetable page, correcting text overlap issues, using WS3 table template for WEEKLY CLASSES section

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato|Oswald&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
 /* common title for all pages */
 
@@ -166,6 +167,7 @@ hr {
     margin-top: 5%;
     margin-bottom: 5%;
     background-color: silver;
+    clear:both;
     }
 
 
@@ -256,4 +258,24 @@ margin:0;
 
 .test li a {
     color:black;
+}
+
+/* ----------------- timetable (tt) styles */
+
+.tt-oh {
+    clear:both;
+    line-height: 0;
+    text-align: center;
+    min-height:600px;
+    border: 5% solid white;
+}
+
+.tt-oh h1 {
+    text-decoration: underline;
+}
+
+.tt-oh-s1 {
+    padding-top: 5%;
+    border-bottom-style: solid;
+    border-bottom-color: white;
 }
